# diner_waitress_robot

diner_waitress_bridge/: package.xml  setup.cfg  setup.py
diner_waitress_bridge/diner_waitress_bridge/: ___init___.py  command_definitions.py  parser.py  serial_bridge.py
diner_waitress_bridge/launch/: serial_bridge.launch.py
diner_waitress_bridge/test/: test_dummy.py
diner_waitress_robot/: CMakeLists.txt  README.md  package.xml
diner_waitress_robot/config/: costmap_common.yaml  mapper_params_online_async.yaml  nav2_params.yaml  robot_localization.yaml  view_waitress.rviz
diner_waitress_robot/description/: inertial_macros.xacro  lidar.xacro  robot_core.xacro  waitress.urdf.xacro
diner_waitress_robot/launch/: navigation.launch.py  rplidar.launch.py  rsp.launch.py  slam_toolbox.launch.py  waitress_all.launch.py
