<?xml version="1.0"?>
<package format="3">
  <name>diner_waitress_bridge</name>
  <version>0.0.1</version>
  <description>UART communication bridge between Jetson and Arduino for robot waitress project.</description>

  <maintainer email="kresna@example.com">I Putu Kresna Dwipayana</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>unittest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
